rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x411_1999_MTSUpperBounds.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x411_1999_MTSUpperBounds.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod mtsupper_bounds {
    extern crate alloc;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[doc = "\tUpper Bounds"]
    pub static UB_ADDITIONAL_INFO: LazyLock<Integer> = LazyLock::new(|| Integer::from(1024));
    pub static UB_BILATERAL_INFO: LazyLock<Integer> = LazyLock::new(|| Integer::from(1024));
    pub static UB_BIT_OPTIONS: LazyLock<Integer> = LazyLock::new(|| Integer::from(16));
    pub static UB_BUILT_IN_CONTENT_TYPE: LazyLock<Integer> = LazyLock::new(|| Integer::from(32767));
    pub static UB_BUILT_IN_ENCODED_INFORMATION_TYPES: LazyLock<Integer> =
        LazyLock::new(|| Integer::from(32));
    pub static UB_CERTIFICATES: LazyLock<Integer> = LazyLock::new(|| Integer::from(64));
    pub static UB_COMMON_NAME_LENGTH: LazyLock<Integer> = LazyLock::new(|| Integer::from(64));
    pub static UB_CONTENT_CORRELATOR_LENGTH: LazyLock<Integer> =
        LazyLock::new(|| Integer::from(512));
    pub static UB_CONTENT_ID_LENGTH: LazyLock<Integer> = LazyLock::new(|| Integer::from(16));
    pub static UB_CONTENT_LENGTH: LazyLock<Integer> = LazyLock::new(|| Integer::from(2147483647));
    #[doc = " the largest integer in 32 bits"]
    pub static UB_CONTENT_TYPES: LazyLock<Integer> = LazyLock::new(|| Integer::from(1024));
    pub static UB_COUNTRY_NAME_ALPHA_LENGTH: LazyLock<Integer> = LazyLock::new(|| Integer::from(2));
    pub static UB_COUNTRY_NAME_NUMERIC_LENGTH: LazyLock<Integer> =
        LazyLock::new(|| Integer::from(3));
    pub static UB_DELIVERABLE_CLASS: LazyLock<Integer> = LazyLock::new(|| Integer::from(256));
    pub static UB_DIAGNOSTIC_CODES: LazyLock<Integer> = LazyLock::new(|| Integer::from(32767));
    pub static UB_DL_EXPANSIONS: LazyLock<Integer> = LazyLock::new(|| Integer::from(512));
    pub static UB_DOMAIN_DEFINED_ATTRIBUTE_TYPE_LENGTH: LazyLock<Integer> =
        LazyLock::new(|| Integer::from(8));
    pub static UB_DOMAIN_DEFINED_ATTRIBUTE_VALUE_LENGTH: LazyLock<Integer> =
        LazyLock::new(|| Integer::from(128));
    pub static UB_DOMAIN_DEFINED_ATTRIBUTES: LazyLock<Integer> = LazyLock::new(|| Integer::from(4));
    pub static UB_DOMAIN_NAME_LENGTH: LazyLock<Integer> = LazyLock::new(|| Integer::from(16));
    pub static UB_E163_4_NUMBER_LENGTH: LazyLock<Integer> = LazyLock::new(|| Integer::from(15));
    pub static UB_E163_4_SUB_ADDRESS_LENGTH: LazyLock<Integer> =
        LazyLock::new(|| Integer::from(40));
    pub static UB_ENCODED_INFORMATION_TYPES: LazyLock<Integer> =
        LazyLock::new(|| Integer::from(1024));
    pub static UB_EXTENSION_ATTRIBUTES: LazyLock<Integer> = LazyLock::new(|| Integer::from(256));
    pub static UB_EXTENSION_TYPES: LazyLock<Integer> = LazyLock::new(|| Integer::from(256));
    pub static UB_GENERATION_QUALIFIER_LENGTH: LazyLock<Integer> =
        LazyLock::new(|| Integer::from(3));
    pub static UB_GIVEN_NAME_LENGTH: LazyLock<Integer> = LazyLock::new(|| Integer::from(16));
    pub static UB_INITIALS_LENGTH: LazyLock<Integer> = LazyLock::new(|| Integer::from(5));
    pub static UB_INTEGER_OPTIONS: LazyLock<Integer> = LazyLock::new(|| Integer::from(256));
    pub static UB_LABELS_AND_REDIRECTIONS: LazyLock<Integer> = LazyLock::new(|| Integer::from(256));
    pub static UB_LOCAL_ID_LENGTH: LazyLock<Integer> = LazyLock::new(|| Integer::from(32));
    pub static UB_MTA_NAME_LENGTH: LazyLock<Integer> = LazyLock::new(|| Integer::from(32));
    pub static UB_MTS_USER_TYPES: LazyLock<Integer> = LazyLock::new(|| Integer::from(256));
    pub static UB_NUMERIC_USER_ID_LENGTH: LazyLock<Integer> = LazyLock::new(|| Integer::from(32));
    pub static UB_ORGANIZATION_NAME_LENGTH: LazyLock<Integer> = LazyLock::new(|| Integer::from(64));
    pub static UB_ORGANIZATIONAL_UNIT_NAME_LENGTH: LazyLock<Integer> =
        LazyLock::new(|| Integer::from(32));
    pub static UB_ORGANIZATIONAL_UNITS: LazyLock<Integer> = LazyLock::new(|| Integer::from(4));
    pub static UB_ORIG_AND_DL_EXPANSIONS: LazyLock<Integer> = LazyLock::new(|| Integer::from(513));
    #[doc = " ub-dl-expansions plus one"]
    pub static UB_PASSWORD_LENGTH: LazyLock<Integer> = LazyLock::new(|| Integer::from(62));
    pub static UB_PDS_NAME_LENGTH: LazyLock<Integer> = LazyLock::new(|| Integer::from(16));
    pub static UB_PDS_PARAMETER_LENGTH: LazyLock<Integer> = LazyLock::new(|| Integer::from(30));
    pub static UB_PDS_PHYSICAL_ADDRESS_LINES: LazyLock<Integer> =
        LazyLock::new(|| Integer::from(6));
    pub static UB_POSTAL_CODE_LENGTH: LazyLock<Integer> = LazyLock::new(|| Integer::from(16));
    pub static UB_PRIVACY_MARK_LENGTH: LazyLock<Integer> = LazyLock::new(|| Integer::from(128));
    pub static UB_QUEUE_SIZE: LazyLock<Integer> = LazyLock::new(|| Integer::from(2147483647));
    #[doc = " the largest integer in 32 bits"]
    pub static UB_REASON_CODES: LazyLock<Integer> = LazyLock::new(|| Integer::from(32767));
    pub static UB_RECIPIENT_NUMBER_FOR_ADVICE_LENGTH: LazyLock<Integer> =
        LazyLock::new(|| Integer::from(32));
    pub static UB_RECIPIENTS: LazyLock<Integer> = LazyLock::new(|| Integer::from(32767));
    pub static UB_REDIRECTION_CLASSES: LazyLock<Integer> = LazyLock::new(|| Integer::from(256));
    pub static UB_REDIRECTIONS: LazyLock<Integer> = LazyLock::new(|| Integer::from(512));
    pub static UB_RESTRICTIONS: LazyLock<Integer> = LazyLock::new(|| Integer::from(1024));
    pub static UB_SECURITY_CATEGORIES: LazyLock<Integer> = LazyLock::new(|| Integer::from(64));
    pub static UB_SECURITY_LABELS: LazyLock<Integer> = LazyLock::new(|| Integer::from(256));
    pub static UB_SECURITY_PROBLEMS: LazyLock<Integer> = LazyLock::new(|| Integer::from(256));
    pub static UB_SUPPLEMENTARY_INFO_LENGTH: LazyLock<Integer> =
        LazyLock::new(|| Integer::from(256));
    pub static UB_SURNAME_LENGTH: LazyLock<Integer> = LazyLock::new(|| Integer::from(40));
    pub static UB_TELETEX_PRIVATE_USE_LENGTH: LazyLock<Integer> =
        LazyLock::new(|| Integer::from(128));
    pub static UB_TERMINAL_ID_LENGTH: LazyLock<Integer> = LazyLock::new(|| Integer::from(24));
    pub static UB_TRANSFERS: LazyLock<Integer> = LazyLock::new(|| Integer::from(512));
    pub static UB_TSAP_ID_LENGTH: LazyLock<Integer> = LazyLock::new(|| Integer::from(16));
    pub static UB_UNFORMATTED_ADDRESS_LENGTH: LazyLock<Integer> =
        LazyLock::new(|| Integer::from(180));
    pub static UB_UNIVERSAL_GENERATION_QUALIFIER_LENGTH: LazyLock<Integer> =
        LazyLock::new(|| Integer::from(16));
    pub static UB_UNIVERSAL_GIVEN_NAME_LENGTH: LazyLock<Integer> =
        LazyLock::new(|| Integer::from(40));
    pub static UB_UNIVERSAL_INITIALS_LENGTH: LazyLock<Integer> =
        LazyLock::new(|| Integer::from(16));
    pub static UB_UNIVERSAL_SURNAME_LENGTH: LazyLock<Integer> = LazyLock::new(|| Integer::from(64));
    pub static UB_X121_ADDRESS_LENGTH: LazyLock<Integer> = LazyLock::new(|| Integer::from(16));
}
