rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x412_1999_MHSRoutingDirectoryObjects.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x412_1999_MHSRoutingDirectoryObjects.asn1
---
Error matching ASN syntax at while parsing:
     ╭─[line 152, column 2]
     │
     │ 
 152 │  ConnectionInformation ::= SET { ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 153 │    application-context       [0]  OBJECT IDENTIFIER DEFAULT id-ac-mts-transfer,
 154 │    profiles                  [1]  SET OF OBJECT IDENTIFIER OPTIONAL,
 155 │    dn-used-in-a-associate    [2]  BOOLEAN DEFAULT TRUE,
 156 │    network-address-reliable  [3]  BOOLEAN DEFAULT TRUE,
 157 │    authentication-method     [4]  AuthenticationMethod DEFAULT simple-password,
 158 │    weighting-factors         [5]  INSTANCE OF TYPE-IDENTIFIER OPTIONAL
 159 │  }
     │
─────╯
