rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x413_1999_MSAbstractService.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x413_1999_MSAbstractService.asn1
---
Error matching ASN syntax at while parsing:
     ╭─[line 237, column 2]
     │
     │ 
 237 │  MSExtensionItem ::= INSTANCE OF MS-EXTENSION ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
     │
─────╯
