rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x413_1999_MSObjectIdentifiers.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x413_1999_MSObjectIdentifiers.asn1
---
Warnings:
LinkerError in ASN grammar: Failed to link value with 'ID'
LinkerError in ASN grammar: Failed to link value with 'ID'
LinkerError in ASN grammar: Failed to link value with 'ID'
LinkerError in ASN grammar: Failed to link value with 'ID'
LinkerError in ASN grammar: Failed to link value with 'ID'
LinkerError in ASN grammar: Failed to link value with 'ID'
LinkerError in ASN grammar: Failed to link value with 'ID'
LinkerError in ASN grammar: Failed to link value with 'ID'
LinkerError in ASN grammar: Failed to link value with 'ID'
LinkerError in ASN grammar: Failed to link value with 'ID'
LinkerError in ASN grammar: Failed to link value with 'ID'


Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod msobject_identifiers {
    extern crate alloc;
    use super::mhsobject_identifiers::*;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    pub static ID_AAE: LazyLock<ID> = LazyLock::new(|| {
        ID(ID(Oid::new(&[&***ID_MS, &[7u32]].concat())
            .unwrap()
            .to_owned()))
    });
    pub static ID_ACT: LazyLock<ID> = LazyLock::new(|| {
        ID(ID(Oid::new(&[&***ID_MS, &[4u32]].concat())
            .unwrap()
            .to_owned()))
    });
    pub static ID_ALG: LazyLock<ID> = LazyLock::new(|| {
        ID(ID(Oid::new(&[&***ID_MS, &[10u32]].concat())
            .unwrap()
            .to_owned()))
    });
    pub static ID_ATT: LazyLock<ID> = LazyLock::new(|| {
        ID(ID(Oid::new(&[&***ID_MS, &[3u32]].concat())
            .unwrap()
            .to_owned()))
    });
    pub static ID_CP: LazyLock<ID> = LazyLock::new(|| {
        ID(ID(Oid::new(&[&***ID_MS, &[6u32]].concat())
            .unwrap()
            .to_owned()))
    });
    pub static ID_CRT: LazyLock<ID> = LazyLock::new(|| {
        ID(ID(Oid::new(&[&***ID_MS, &[5u32]].concat())
            .unwrap()
            .to_owned()))
    });
    pub static ID_EXT: LazyLock<ID> = LazyLock::new(|| {
        ID(ID(Oid::new(&[&***ID_MS, &[9u32]].concat())
            .unwrap()
            .to_owned()))
    });
    #[doc = " Categories"]
    pub static ID_MOD: LazyLock<ID> = LazyLock::new(|| {
        ID(ID(Oid::new(&[&***ID_MS, &[0u32]].concat())
            .unwrap()
            .to_owned()))
    });
    pub static ID_MR: LazyLock<ID> = LazyLock::new(|| {
        ID(ID(Oid::new(&[&***ID_MS, &[8u32]].concat())
            .unwrap()
            .to_owned()))
    });
    pub static ID_OT: LazyLock<ID> = LazyLock::new(|| {
        ID(ID(Oid::new(&[&***ID_MS, &[1u32]].concat())
            .unwrap()
            .to_owned()))
    });
    pub static ID_PT: LazyLock<ID> = LazyLock::new(|| {
        ID(ID(Oid::new(&[&***ID_MS, &[2u32]].concat())
            .unwrap()
            .to_owned()))
    });
}
