rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x413_1999_MSUpperBounds.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x413_1999_MSUpperBounds.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod msupper_bounds {
    extern crate alloc;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[doc = " \tUpper Bounds"]
    pub static UB_ALERT_ADDRESSES: LazyLock<Integer> = LazyLock::new(|| Integer::from(16i128));
    pub static UB_ATTRIBUTE_VALUES: LazyLock<Integer> = LazyLock::new(|| Integer::from(32767i128));
    #[doc = " (215 - 1) the largest integer"]
    #[doc = " representable in 16 bits"]
    pub static UB_ATTRIBUTES_SUPPORTED: LazyLock<Integer> =
        LazyLock::new(|| Integer::from(1024i128));
    pub static UB_AUTO_ACTION_ERRORS: LazyLock<Integer> =
        LazyLock::new(|| Integer::from(32767i128));
    #[doc = " (215 - 1) the largest integer"]
    #[doc = " representable in 16 bits"]
    pub static UB_AUTO_ACTIONS: LazyLock<Integer> = LazyLock::new(|| Integer::from(128i128));
    pub static UB_AUTO_REGISTRATIONS: LazyLock<Integer> = LazyLock::new(|| Integer::from(1024i128));
    pub static UB_DEFAULT_REGISTRATIONS: LazyLock<Integer> =
        LazyLock::new(|| Integer::from(1024i128));
    pub static UB_ENTRY_CLASSES: LazyLock<Integer> = LazyLock::new(|| Integer::from(128i128));
    pub static UB_ENTRY_TYPES: LazyLock<Integer> = LazyLock::new(|| Integer::from(16i128));
    pub static UB_ERROR_REASONS: LazyLock<Integer> = LazyLock::new(|| Integer::from(16i128));
    pub static UB_EXTENSIONS: LazyLock<Integer> = LazyLock::new(|| Integer::from(32i128));
    pub static UB_GROUP_DEPTH: LazyLock<Integer> = LazyLock::new(|| Integer::from(64i128));
    pub static UB_GROUP_DESCRIPTOR_LENGTH: LazyLock<Integer> =
        LazyLock::new(|| Integer::from(256i128));
    pub static UB_GROUP_PART_LENGTH: LazyLock<Integer> = LazyLock::new(|| Integer::from(128i128));
    pub static UB_INFORMATION_BASES: LazyLock<Integer> = LazyLock::new(|| Integer::from(16i128));
    pub static UB_MATCHING_RULES: LazyLock<Integer> = LazyLock::new(|| Integer::from(1024i128));
    pub static UB_MESSAGE_GROUPS: LazyLock<Integer> = LazyLock::new(|| Integer::from(8192i128));
    pub static UB_MESSAGE_NOTES_LENGTH: LazyLock<Integer> =
        LazyLock::new(|| Integer::from(1024i128));
    pub static UB_MESSAGES: LazyLock<Integer> = LazyLock::new(|| Integer::from(2147483647i128));
    #[doc = " (231 - 1) the largest integer"]
    #[doc = " representable in 32 bits"]
    pub static UB_MODIFICATIONS: LazyLock<Integer> = LazyLock::new(|| Integer::from(32767i128));
    #[doc = " (215 - 1) the largest integer"]
    #[doc = " representable in 16 bits"]
    pub static UB_MSSTRING_MATCH: LazyLock<Integer> = LazyLock::new(|| Integer::from(512i128));
    pub static UB_PER_AUTO_ACTION: LazyLock<Integer> = LazyLock::new(|| Integer::from(32767i128));
    #[doc = " (215 - 1) the largest integer"]
    #[doc = " representable in 16 bits"]
    pub static UB_PER_ENTRY: LazyLock<Integer> = LazyLock::new(|| Integer::from(1024i128));
    pub static UB_RESTRICTIONS: LazyLock<Integer> = LazyLock::new(|| Integer::from(16i128));
    pub static UB_SERVICE_INFORMATION_LENGTH: LazyLock<Integer> =
        LazyLock::new(|| Integer::from(2048i128));
    pub static UB_SUMMARIES: LazyLock<Integer> = LazyLock::new(|| Integer::from(16i128));
    pub static UB_SUPPLEMENTARY_INFO_LENGTH: LazyLock<Integer> =
        LazyLock::new(|| Integer::from(256i128));
    pub static UB_UA_REGISTRATION_IDENTIFIER_LENGTH: LazyLock<Integer> =
        LazyLock::new(|| Integer::from(32i128));
    pub static UB_UA_REGISTRATIONS: LazyLock<Integer> = LazyLock::new(|| Integer::from(128i128));
}
