rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x419_1999_MHSProtocolObjectIdentifiers.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x419_1999_MHSProtocolObjectIdentifiers.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod mhsprotocol_object_identifiers {
    extern crate alloc;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct ID(pub ObjectIdentifier);
    #[doc = "\tMHS Protocols"]
    pub static ID_MHS_PROTOCOLS: LazyLock<ID> =
        LazyLock::new(|| ID(Oid::const_new(&[2u32, 6u32, 0u32]).to_owned()));
}
